--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -17,6 +17,7 @@
         {{ partial "footer" . }}
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="/js/logo-shader.js"></script>
+    <script src="/js/ls.js"></script>
+    <script src="/js/hw.js"></script>
 </body>
 </html>
