--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
-:root{
+:root {
     --b: #FEFEFA;
     --s: #DEDCDA;
     --t: #000000;
@@ -12,7 +12,7 @@
     --n: #CC00AA;
 }
 
-*{
+* {
     margin: 0;
     box-sizing: border-box;
     -webkit-user-select: none;
@@ -22,7 +22,7 @@
     user-select: none;
 }
 
-body{
+body {
     font-size: 19px;
     background: var(--b);
     color: var(--t);
@@ -36,7 +36,7 @@ body{
     text-size-adjust: 100%;
 }
 
-body.dark{
+body.dark {
     --b: #111111;
     --s: #444444;
     --t: #FEFCFA;
@@ -44,19 +44,19 @@ body.dark{
     --n: #CC00AA;
 }
 
-h2{
+h2 {
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 3.5px;
 }
 
-h3{
+h3 {
     font-weight: 400;
     font-size: 17px;
     color: var(--d);
 }
 
-p{
+p {
     font-size: 16px;
     font-weight: 400;
     margin-bottom: 15px;
@@ -65,16 +65,16 @@ p{
     line-height: 125%;
 }
 
-a{
+a {
     text-decoration: none;
-    -webkit-user-select: none;       
+    -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
 
-.toggle{
-    -webkit-user-select: none;       
+.toggle {
+    -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -83,25 +83,25 @@ a{
     color: var(--n);
 }
 
-.container{
+.container {
     max-width: 70ch;
     padding: 20px;
     margin: auto;
 }
 
-.navbar{
+.navbar {
     margin-bottom: 25px;
     display: block;
 }
 
-.navbarBox{
+.navbarBox {
     display: flex;
     gap: 10px;
     padding: 2px;
     background: var(--s);
 }
 
-.footer{
+.footer {
     display: flex;
     padding: 2px;
     background: var(--s);
@@ -109,7 +109,7 @@ a{
     margin-top: 25px;
 }
 
-.linkText{
+.linkText {
     font-size: 17px;
     color: var(--n);
 }
@@ -152,28 +152,29 @@ a{
 }
 
 
-.articleLink{
+.articleLink {
     color: var(--t);
 }
 
 @keyframes moveStripes {
     0% {
-      background-position: 25px 0;
+        background-position: 25px 0;
     }
+
     100% {
-      background-position: 0 0;
+        background-position: 0 0;
     }
-  }
-  
-  div#stripes {
+}
+
+div#stripes {
     height: 8px;
     background-image: linear-gradient(135deg, var(--s) 25%, transparent 25%, transparent 50%, var(--s) 50%, var(--s) 75%, transparent 75%, #fff);
     background-size: 25px 25px;
     animation: moveStripes 4s linear infinite;
-  }
-  
+}
 
-.informationBar{
+
+.informationBar {
     font-family: "Public Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -182,11 +183,11 @@ a{
     font-size: 15px;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     margin-top: 2.5px;
 }
 
-.informationBarBottom{
+.informationBarBottom {
     font-family: "Public Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -197,18 +198,18 @@ a{
     justify-content: space-between;
 }
 
-.articleNumber{
+.articleNumber {
     color: var(--t);
     flex-grow: 1;
     flex-basis: 0;
 }
 
-.edition{
+.edition {
     color: var(--n);
 
 }
 
-.categoryList{
+.categoryList {
     font-family: "Public Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -221,22 +222,23 @@ a{
     margin-top: 2.5px;
 }
 
-.categoryItem{
+.categoryItem {
     background: var(--s);
     color: var(--t);
     padding-left: 10px;
     padding-right: 10px;
 }
-.categoryItem:hover{
+
+.categoryItem:hover {
     background: var(--n);
     color: var(--b);
 }
 
-.categoryItemLink{
+.categoryItemLink {
     color: inherit;
 }
 
-.pagination{
+.pagination {
     font-family: "Public Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -252,40 +254,40 @@ a{
     margin-top: 25px;
 }
 
-.page-link{
+.page-link {
     color: inherit;
 }
 
-.page-item{
+.page-item {
     color: var(--d);
     text-decoration: none;
 }
 
-.page-item.active{
+.page-item.active {
     color: var(--n);
     text-decoration: none;
 }
 
-.page-item.disabled{
+.page-item.disabled {
     color: var(--s);
     cursor: not-allowed;
 }
 
-.wordCount{
+.wordCount {
     color: var(--t);
     flex-grow: 1;
     flex-basis: 0;
     text-align: right;
 }
 
-.articleContent{
+.articleContent {
     display: inline-block;
     white-space: wrap;
     text-align: justify;
     font-size: 16px;
 }
 
-.author{
+.author {
     font-family: "Public Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 900;
@@ -299,18 +301,18 @@ a{
     text-align: right;
 }
 
-.time{
+.time {
     color: var(--d);
     flex-grow: 1;
     flex-basis: 0;
 }
 
-.id{
+.id {
     margin-top: auto;
     font-size: 11px;
 }
 
-.articleImage{
+.articleImage {
     width: 100%;
 }
 
@@ -344,4 +346,21 @@ a{
     line-height: 110%;
     color: var(--b);
     z-index: 1;
+}
+
+.image-wrapper {
+    position: relative;
+    overflow: hidden;
+    aspect-ratio: 3 / 2;
+}
+
+.image-wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 0.2s;
 }
