--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -23,7 +23,7 @@
           <img class="articleImage" src="{{ $original.RelPermalink }}" loading="lazy" alt="" onload="this.style.opacity=1">
         </div>
       {{ else }}
-        <div class="image-wrapper" style="background-color: #777777;">
+        <div class="image-wrapper" style="background-color: #BBBBBB;">
           <img class="articleImage" src="/images/{{.Params.slug}}.webp" loading="lazy" alt="" onload="this.style.opacity=1">
         </div>
       {{ end }}
