--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -19,5 +19,6 @@
         {{ block "main" . }} {{ end }}
         {{ partial "footer" . }}
     </div>
+    <script src="/js/t.js"></script>
 </body>
 </html>
