--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -1,16 +1,22 @@
 <nav class="navbar">
-    <div class="navbarBox">
-        <div class="link">
-            <a href="/" class="linkText">[home]</a>
-        </div>
-        <div class="link">
-            <a href="/categories" class="linkText">[themen]</a>
-        </div>
+  <div class="navbarBox">
+    <div class="navLinks">
+      <div class="link">
+        <a href="/" class="linkText">[home]</a>
+      </div>
+      <div class="link">
+        <a href="/categories" class="linkText">[themen]</a>
+      </div>
     </div>
-    <a href="/">
-        <div class="logo">
-            <canvas id="logoCanvas"></canvas>
-            <div class="logoText">PRACHT</div>
-        </div>
-    </a>
+    <div class="dateDisplay">
+      <img src="/earth.gif" alt="Earth" class="earthIcon" data-nimg="1" style="mix-blend-mode: multiply">
+      <span id="currentDateTime"></span>
+    </div>
+  </div>
+  <a href="/">
+    <div class="logo">
+      <canvas id="logoCanvas"></canvas>
+      <div class="logoText">PRACHT</div>
+    </div>
+  </a>
 </nav>
