--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -114,7 +114,7 @@ a {
 .dateDisplay {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 6.5px;
     font-family: Helvetica, sans-serif;
     font-size: 11px;
     letter-spacing: normal;
@@ -173,6 +173,22 @@ a {
 
 .articleLink {
     color: var(--t);
+    transition: color 0.3s ease; /* Add transition for text color */
+}
+
+.articleTitle,
+.articleSubtitle {
+    transition: color 0.3s ease; /* Add transition for text color */
+}
+
+.articleHeadList:hover .articleLink,
+.articleHeadList:hover .articleTitle {
+    color: var(--n);
+}
+
+.articleHeadList:hover .articleSubtitle {
+    color: var(--n);
+    opacity: 0.8; /* Slightly reduce opacity for subtitle to maintain hierarchy */
 }
 
 @keyframes moveStripes {
