--- a/blogv2/layouts/partials/navbar.html
+++ b/blogv2/layouts/partials/navbar.html
@@ -8,7 +8,7 @@
                 <a href="/categories" class="nav-link">[themen]</a>
             </div>
         </div>
-        <div class="navbar-date-wrapper">
+        <div class="navbar-date-container">
             {{ now.Format "Monday January 2, 2006"}}
         </div>
     </div>
