--- a/blogv2/public/styles/style.css
+++ b/blogv2/public/styles/style.css
@@ -34,11 +34,6 @@ ol {
     list-style: none;
 }
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
 img {
     max-width: 100%;
     height: auto;
@@ -59,10 +54,9 @@ img {
 body {
     background: var(--white);
     font-family: "Fira Sans", sans-serif;
-    font-optical-sizing: auto;
+    font-optical-sizing: none;
     font-weight: 400;
-    font-style: normal;
-    line-height: 125%;
+    line-height: 16px;
     color: var(--black);
 }
 
