--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -2,7 +2,8 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=825px, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=content-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
     <meta name="description" content="{{or .Params.subtitle .Site.Params.description }}">
     <title>{{ .Title }}</title>
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
