--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=content-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
     <meta name="description" content="{{or .Params.subtitle .Site.Params.description }}">
     <title>{{ .Title }}</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
+
 <body>
     <div class="site-container">
         {{ partial "navbar" . }}
@@ -18,4 +24,5 @@
         {{ partial "footer" . }}
     </div>
 </body>
+
 </html>
