--- a/blogv2/public/styles/style.css
+++ b/blogv2/public/styles/style.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-/* normalization */
+/* - - - - - - - - - - - - - - - - - - - - - */
+/*               normalization               */
 
 *,
 *::before,
@@ -39,7 +38,8 @@ img {
     height: auto;
 }
 
-/* colors */
+/* - - - - - - - - - - - - - - - - - - - - - */
+/*                   colors                  */
 
 :root {
     --grey: #777777;
@@ -49,7 +49,8 @@ img {
     --black: #000000;
 }
 
-/* baseof */
+/* - - - - - - - - - - - - - - - - - - - - - */
+/*                   baseof                  */
 
 body {
     background: var(--white);
@@ -71,7 +72,8 @@ body {
     padding-bottom: 25px;
 }
 
-/* navbar & footer */
+/* - - - - - - - - - - - - - - - - - - - - - */
+/*              navbar & footer              */
 
 .nav-container {
     background: var(--off-white);
@@ -125,7 +127,8 @@ body {
     padding: 7.5px;
 }
 
-/* article list */
+/* - - - - - - - - - - - - - - - - - - - - - */
+/*                article list               */
 
 .article-list {
     display: flex;
@@ -172,7 +175,8 @@ body {
     color: var(--grey);
 }
 
-/* article */
+/* - - - - - - - - - - - - - - - - - - - - - */
+/*                  article                  */
 
 @keyframes moveStripes {
     0% {
@@ -186,7 +190,11 @@ body {
 
 div#moving-stripes {
     height: 10px;
-    background-image: linear-gradient(135deg, var(--off-white) 25%, transparent 25%, transparent 50%, var(--off-white) 50%, var(--off-white) 75%, transparent 75%, var(--white));
+    background-image: linear-gradient(135deg,
+            var(--off-white) 25%, transparent 25%,
+            transparent 50%, var(--off-white) 50%,
+            var(--off-white) 75%, transparent 75%,
+            var(--white));
     background-size: 25px 25px;
     animation: moveStripes 4s linear infinite;
 }
