--- a/blogv2/layouts/partials/navbar.html
+++ b/blogv2/layouts/partials/navbar.html
@@ -5,7 +5,7 @@
                 <a href="/" class="nav-link">[home]</a>
             </div>
             <div class="nav-link-wrapper">
-                <a href="/categories" class="nav-link">[themen]</a>
+                <a href="/themen" class="nav-link">[themen]</a>
             </div>
         </div>
         <div class="navbar-date-container">
