--- a/blogv2/static/styles/style.css
+++ b/blogv2/static/styles/style.css
@@ -45,7 +45,7 @@ img {
     --grey: #777777;
     --purple: #CC00AA;
     --white: #FEFCFA;
-    --off-white: #DEDCDA;
+    --off-white: #EEECEA;
     --black: #000000;
 }
 
