--- a/blogv2/layouts/partials/footer.html
+++ b/blogv2/layouts/partials/footer.html
@@ -2,10 +2,10 @@
     <div class="nav-container">
         <div class="nav-link-container">
             <div class="nav-link-wrapper">
-                <a href="https://bsky.pracht.report/" class="nav-link">[bsky]</a>
+                <a href="https://bsky.pracht.report/" class="nav-link link" data-navigation="true">[bsky]</a>
             </div>
             <div class="nav-link-wrapper">
-                <a href="https://twitter.pracht.report/" class="nav-link">[twitter]</a>
+                <a href="https://twitter.pracht.report/" class="nav-link link" data-navigation="true">[twitter]</a>
             </div>
         </div>
     </div>
