--- a/blogv2/layouts/_default/single.html
+++ b/blogv2/layouts/_default/single.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="article-image-wrapper">
-            <img class="articleImage" src="/images/{{.Params.slug}}.webp" loading="lazy" alt="">
+            <img class="article-image" src="/images/{{.Params.slug}}.webp" loading="lazy" alt="">
         </div>
         <div class="article-banner-container article-banner-head">
             <div class="article-title-wrapper">
