--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -88,6 +88,7 @@
             --white: #FEFCFA;
             --off-white: #EEECEA;
             --black: #000000;
+            --bright-grey: #AEACAA;
         }
 
         body {
@@ -220,7 +221,7 @@
             right: 0;
             bottom: 0;
             height: 1px;
-            background: var(--off-white);
+            background: var(--bright-grey);
         }
 
         .article-banner-container {
