--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -239,7 +239,6 @@
     <link rel="stylesheet" href="/styles/style.css" media="print" onload="this.media='all'">
 
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
-    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -250,6 +249,7 @@
         </div>
         {{ partial "footer" . }}
     </div>
+    <script defer src="/js/prefetch.js"></script>
 </body>
 
 </html>
