--- a/blogv2/layouts/partials/footer.html
+++ b/blogv2/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer class="footer">
     <div class="nav-container">
         <div class="nav-link-container">
             <div class="nav-link-wrapper">
@@ -9,4 +9,4 @@
             </div>
         </div>
     </div>
-</div>
+</footer>
